--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+canvas{
+  height: 50vh;
+  width: 100vw;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
